[package]
name = "rust_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = "1.0.178"
serde_json = "1.0.104"
tokio = {version = "1.29.1", features = ["full"] }
webhook = { version = "2.1.2", features = ["models"] }

